# MLProject

./: app.py  application.py  pyproject.toml  requirements.txt  setup.py
Notebook/: 1 . EDA STUDENT PERFORMANCE .ipynb  2. MODEL TRAINING.ipynb
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformatin.py  model_trainer.py
templates/: home.html
