[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlproject"
version = "0.0.1"
description = "A description of your mlproject" #<-- Replace with your description.
dependencies = [
    "contourpy",
    "cycler",
    "fonttools",
    "kiwisolver",
    "matplotlib",
    "numpy",
    "packaging",
    "pandas",
    "pillow",
    "pyparsing",
    "python-dateutil",
    "pytz",
    "seaborn",
    "six",
    "tzdata"
]