[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlproject"
version = "0.0.1"
description = "A description of your mlproject"  # Replace with your actual description
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.23.0",
    "seaborn>=0.12.0",
    "matplotlib>=3.6.0",
    "scikit-learn>=1.2.0",
    "catboost>=1.2",
    "xgboost>=1.7"
]

[project.optional-dependencies]
dev = ["pytest", "flake8", "black"] # optional development dependencies.

[tool.setuptools.packages.find]
where = ["src"] # where to find packages.